# nqm-iot-database-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  conf.py  index.rst  mypy.ini  pylintrc  pyproject.toml  setup.py
.github/workflows/: main.yml  pythonpublish.yml
docs/coverage/: undoc.pickle
docs/doctest/: output.txt
docs/doctrees/: CONTRIBUTING.doctree  README.doctree  environment.pickle  index.doctree
docs/html/: .buildinfo  CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html  typing.html
docs/html/_sources/: index.rst.txt
docs/html/docs/source/: modules.html  nqm.iotdatabase.html  (+5 more)
nqm/iotdatabase/: __init__.py  _datasetdata.py  _matrix.py  _ndarray.py  _sqlitealchemyconverter.py  _sqliteconstants.py  _sqliteinfotable.py  _sqlitemanager.py  _sqliteschemaconverter.py  _sqliteutils.py  _warnings.py  database.py
nqm/iotdatabase/_ndarray/: __init__.py  fileio.py  ndarray.py  storageformats.py
nqm/iotdatabase/ndarray/: __init__.py  fileio.py  ndarray.py  storageformats.py
nqm_iot_database/: __init__.py  _sqlitealchemyconverter.py  _sqliteinfotable.py  _sqlitemanager.py  _sqliteschemaconverter.py  database.py
tests/: conftest.py  infokeys.json  tdx-schemas.json  test_database.py  test_database_getdata.py  test_matrix.py  test_multithreading.py  test_ndarray.py  test_sqliteinfotable.py  test_sqliteschemaconverter.py  test_sqliteschemaconverter_convertSchemaParams.json  test_sqliteutils.py  test_version.py
(+12 files in other folders)
